--- a/style.css
+++ b/style.css
@@ -9,9 +9,8 @@ section {
   justify-content: center;
   min-height: 100vh;
   width: 100%;
-  background: url("/img/bg1.png") no-repeat;
-  background-position: center;
-  background-size: cover;
+}
+img {
 }
 head,
 body {
@@ -23,15 +22,23 @@ body {
   overflow: hidden;
 }
 form {
+  position: absolute;
   padding-top: 2.5cm;
 }
-.wrapper {
-  padding: 50px 50px;
-  background: url("/img/32.gif");
+.wrapper .cover {
+  position: absolute;
+  background: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-top: 0.5cm;
+  min-height: 62vh;
+  left: -55px;
+  width: 10cm;
   border-radius: 20px 0px 20px 0px;
-  color: #ffffff;
 }
 .wrapper h1 {
+  color: #fff;
+  position: relative;
   padding: 1cm;
   font-size: 30px;
 }
@@ -49,6 +56,8 @@ form {
   transition: 0.5s;
 }
 .wrapper p {
+  color: #fff;
+  position: relative;
   padding-top: 15px;
 }
 .wrapper a {
@@ -56,11 +65,14 @@ form {
   color: #c7c7d3;
 }
 .wrapper .ingatsaya {
+  color: #fff;
+  position: relative;
   margin-right: 4cm;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 10px;
+  padding-bottom: 15px;
 }
 .wrapper button {
+  position: relative;
   border-radius: 50px;
   border: none;
   background-color: rgb(0, 233, 116);
